cockroachlabs-preview-main/docs/v24.3/alter-virtual-cluster.mdx
---
title: "ALTER VIRTUAL CLUSTER"
old_description: "The ALTER VIRTUAL CLUSTER statement manages a virtual cluster, including any related physical replication stream."
---

import { InlineImage } from "/snippets/InlineImage.jsx";
import { AlterVirtualCluster } from "/snippets/syntax-diagrams/AlterVirtualCluster.jsx";

<Note>
**This feature is in [preview](/docs/v24.3/cockroachdb-feature-availability)** and subject to change. To share feedback and/or issues, contact [Support](https://support.cockroachlabs.com/hc/en-us).
</Note>

The `ALTER VIRTUAL CLUSTER` statement initiates a [*failover*](#start-the-failover-process) or [*failback*](#start-the-failback-process) in a [**physical cluster replication (PCR)** job](/docs/v24.3/set-up-physical-cluster-replication) and manages a virtual cluster.

PCR happens between an *active* primary cluster and a *passive* standby cluster that accepts updates from the primary cluster. The unit of replication is a *virtual cluster*, which is part of the underlying infrastructure in the primary and standby clusters. The CockroachDB cluster has:

- The system virtual cluster manages the cluster's control plane and the replication of the cluster's data. Admins connect to the system virtual cluster to configure and manage the underlying CockroachDB cluster, set up PCR, create and manage a virtual cluster, and observe metrics and logs for the CockroachDB cluster and each virtual cluster.
- The application virtual cluster manages the cluster’s data plane. Application virtual clusters contain user data and run application workloads.

For more detail, refer to the [Physical Cluster Replication Overview](/docs/v24.3/physical-cluster-replication-overview).

## Required privileges

`ALTER VIRTUAL CLUSTER` requires one of the following privileges:

- The `admin` role.
- The `MANAGEVIRTUALCLUSTER` [system privilege](/docs/v24.3/security-reference/authorization#privileges) allows the user to run all the related `VIRTUAL CLUSTER` SQL statements for PCR.

Use the [`GRANT SYSTEM`](/docs/v24.3/grant) statement:

```sql
GRANT SYSTEM MANAGEVIRTUALCLUSTER TO user;
```

## Synopsis

xml version="1.0" encoding="UTF-8"?

<AlterVirtualCluster />

## Parameters

<table><thead><tr><th>Parameter</th><th>Description</th></tr></thead><tbody><tr><td><code>virtual&#95;cluster&#95;spec</code></td><td>The virtual cluster's name.</td></tr><tr><td><code>PAUSE REPLICATION</code></td><td>Pause the replication stream.</td></tr><tr><td><code>RESUME REPLICATION</code></td><td>Resume the replication stream.</td></tr><tr><td><code>COMPLETE REPLICATION TO</code></td><td>Set the time to complete the replication. Use:<br/><br/>- <code>SYSTEM TIME</code> to specify a <a href="/docs/v24.3/as-of-system-time">timestamp</a>. Refer to <a href="/docs/v24.3/failover-replication#fail-over-to-a-point-in-time">Fail over to a point in time</a> for an example.<br/><br/>- <code>LATEST</code> to specify the most recent replicated timestamp. Refer to <a href="/docs/v24.3/failover-replication#fail-over-to-the-most-recent-replicated-time">Fail over to a point in time</a> for an example.</td></tr><tr><td><code>START REPLICATION OF virtual&#95;cluster&#95;spec ON physical&#95;cluster</code></td><td>Reset a virtual cluster to the time when the virtual cluster on the promoted standby diverged from it. To reuse as much of the existing data on the original primary cluster as possible, you can run this statement as part of the <a href="/docs/v24.3/failover-replication#failback">failback</a> process. This command fails if the virtual cluster was not originally replicated from the original primary cluster. Refer to <a href="#options">Options</a> for details on how you can configure a PCR stream initiated as a failback.</td></tr><tr><td><code>START SERVICE SHARED</code></td><td>Start a virtual cluster so it is ready to accept SQL connections after failover.</td></tr><tr><td><code>RENAME TO virtual&#95;cluster&#95;spec</code></td><td>Rename a virtual cluster.</td></tr><tr><td><code>STOP SERVICE</code></td><td>Stop the <code>shared</code> service for a virtual cluster. The virtual cluster's <code>data&#95;state</code> will still be <code>ready</code> so that the service can be restarted.</td></tr><tr><td><code>GRANT ALL CAPABILITIES</code></td><td>Grant a virtual cluster all <a href="/docs/v24.3/create-virtual-cluster#capabilities">capabilities</a>.</td></tr><tr><td><code>REVOKE ALL CAPABILITIES</code></td><td>Revoke all <a href="/docs/v24.3/create-virtual-cluster#capabilities">capabilities</a> from a virtual cluster.</td></tr><tr><td><code>GRANT CAPABILITY virtual&#95;cluster&#95;capability&#95;list</code></td><td>Specify a <a href="/docs/v24.3/create-virtual-cluster#capabilities">capability</a> to grant to a virtual cluster.</td></tr><tr><td><code>REVOKE CAPABILITY virtual&#95;cluster&#95;capability&#95;list</code></td><td>Revoke a <a href="/docs/v24.3/create-virtual-cluster#capabilities">capability</a> from a virtual cluster.</td></tr></tbody></table>

## Options

You can use the following options with `ALTER VIRTUAL CLUSTER {vc} START REPLICATION OF virtual_cluster_spec ON physical_cluster` to initiate the [failback process](/docs/v24.3/failover-replication#failback).

<table><thead><tr><th>Option</th><th>Value</th><th>Description</th></tr></thead><tbody><tr><td><InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v24.3:<code>READ VIRTUAL CLUSTER</code></td><td>N/A</td><td>(<a href="/docs/v24.3/cockroachdb-feature-availability#features-in-preview"><strong>Preview</strong></a>) Configure the PCR stream to allow reads from the standby cluster.<br/><strong>Note:</strong> This only allows for reads on the standby's virtual cluster. You cannot perform writes or schema changes to user tables while connected to the standby virtual cluster. For more details, refer to <a href="#start-the-failback-process">Start the failback process</a>.</td></tr></tbody></table>

## Examples

### Start the failover process

To start the [failover](/docs/v24.3/failover-replication#failover) process, use `COMPLETE REPLICATION` and provide the timestamp to restore as of:

```sql
ALTER VIRTUAL CLUSTER main COMPLETE REPLICATION TO {failover time specification};
```

You can use either:

- `SYSTEM TIME` to specify a [timestamp](/docs/v24.3/as-of-system-time).
- `LATEST` to specify the most recent replicated timestamp.

<Note>
If you started the PCR stream with the `READ VIRTUAL CLUSTER` option, failing over with `SYSTEM TIME` will destroy the `readonly` virtual cluster. If you fail over with `LATEST`, the `readonly` virtual cluster will remain on the original standby cluster, but will **not** update with new writes.
</Note>

When a virtual cluster is [`ready`](/docs/v24.3/show-virtual-cluster#responses) after initiating the failover process, you must start the service so that the virtual cluster is ready to accept SQL connections:

```sql
ALTER VIRTUAL CLUSTER main START SERVICE SHARED;
```

To stop the `shared` service for a virtual cluster and prevent it from accepting SQL connections:

```sql
ALTER VIRTUAL CLUSTER main STOP SERVICE;
```

### Start the failback process

To [fail back](/docs/v24.3/failover-replication#failback) to a cluster that was previously the primary cluster, use the `ALTER VIRTUAL CLUSTER` syntax:

```sql
ALTER VIRTUAL CLUSTER {original_primary_vc} START REPLICATION OF {promoted_standby_vc} ON {connection_string_standby};
```

The original primary virtual cluster may be almost up to date with the promoted standby's virtual cluster. The difference in data between the two virtual clusters will include only the writes that have been applied to the promoted standby after failover from the primary cluster.

<InlineImage alt="Megaphone" src="/images/common/icon-megaphone.png" /> New in v24.3: ([**Preview**](/docs/v24.3/cockroachdb-feature-availability#features-in-preview)) Use the `READ VIRTUAL CLUSTER` option with the `ALTER VIRTUAL CLUSTER` failback syntax to start a PCR stream that also creates a read-only virtual cluster on the standby cluster.

<Note>
If you started the original PCR stream on an existing cluster without virtualization enabled, refer to the [Fail back after PCR from an existing cluster](/docs/v24.3/failover-replication) section for instructions.
</Note>

## See also

- [Physical Cluster Replication Overview](/docs/v24.3/physical-cluster-replication-overview)
- [`CREATE VIRTUAL CLUSTER`](/docs/v24.3/create-virtual-cluster)
- [`DROP VIRTUAL CLUSTER`](/docs/v24.3/drop-virtual-cluster)
- [`SHOW VIRTUAL CLUSTER`](/docs/v24.3/show-virtual-cluster)
